completed observer and spacing fix

--- a/src/style/circuit-project-page.scss
+++ b/src/style/circuit-project-page.scss
@@ -321,7 +321,7 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: min-content 1fr;
-      gap: 30px;
+      gap: 30px 60px;
     }
     &-typography_and_color-color_wrapper {
       margin: 0;
@@ -459,12 +459,14 @@
   .circuit_project_page-design {
     &-typography_and_color {
       margin-top: 5.5rem;
-      @include nested-six-wide-grid;
+      display: grid;
+      grid-template-columns: 1fr repeat(2, minmax(auto, 250px)) minmax(auto, 90px) repeat(2, minmax(auto, 250px)) 1fr;
+      gap: 0px;
       &-type_wrapper {
         grid-column: 2 / 4;
       }
       &-color_wrapper {
-        grid-column: 4 / -2;
+        grid-column: 5 / -2;
         margin: 0;
       }
     }
